# Python-CI-Example

./: .pre-commit-config.yaml  Makefile  README.md  SETUP.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
tests/: test_main.py
