[tool.poetry]
name = "python-cicd-example"
version = "0.1.0"
description = ""
authors = ["AlimU <alim.uzhbanokov@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cicd_example"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
add-trailing-comma = "^3.0.1"
git-ignore = "^1.0.2"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
unify = "^0.5"
mypy = "^1.5.0"
wemake-python-styleguide = "^0.18.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
